--- a/roles/xray_core/tasks/configure.yml
+++ b/roles/xray_core/tasks/configure.yml
@@ -1,45 +1,55 @@
 ---
-- name: Generate Xray client UUID if not provided
-  ansible.builtin.command: /usr/local/bin/xray uuid
-  register: xray_uuid_output
-  changed_when: false
-  when: xray_core_client_uuid is not defined or xray_core_client_uuid | length == 0
+- name: check if Xray config.json exists
+  ansible.builtin.stat:
+    path: "{{ xray_core_config_file }}"
+  register: xray_config_file_stat
 
-- name: Set xray_core_client_uuid fact from command output
-  ansible.builtin.set_fact:
-    xray_core_client_uuid: "{{ xray_uuid_output.stdout | trim }}"
-  when: xray_uuid_output.stdout is defined
+- name: Xray Configuration
+  block:
+  - name: Generate Xray client UUID if not provided
+    ansible.builtin.command: /usr/local/bin/xray uuid
+    register: xray_uuid_output
+    changed_when: false
+    when: xray_core_client_uuid is not defined or xray_core_client_uuid | length == 0
 
-- name: Check and Generate Xray Reality key pair if private key not provided
-  ansible.builtin.command: /usr/local/bin/xray x25519
-  register: xray_x25519_output
-  changed_when: false
-  when: xray_core_reality_private_key is not defined or xray_core_reality_private_key | length == 0
+  - name: Set xray_core_client_uuid fact from command output
+    ansible.builtin.set_fact:
+      xray_core_client_uuid: "{{ xray_uuid_output.stdout | trim }}"
+    when: xray_uuid_output.stdout is defined
 
-- name: Set xray_core_reality_private_key fact from command output
-  ansible.builtin.set_fact:
-    xray_core_reality_private_key: "{{ xray_x25519_output.stdout | regex_search('Private key: (\\S+)', '\\1') | first | trim }}"
-  when: xray_x25519_output.stdout is defined
+  - name: Check and Generate Xray Reality key pair if private key not provided
+    ansible.builtin.command: /usr/local/bin/xray x25519
+    register: xray_x25519_output
+    changed_when: false
+    when: xray_core_reality_private_key is not defined or xray_core_reality_private_key | length == 0
 
-- name: Check and Generate Xray Reality Short ID if not provided
-  ansible.builtin.command: openssl rand -hex 8
-  register: openssl_rand_output
-  changed_when: false
-  when: xray_core_reality_short_id is not defined or xray_core_reality_short_id | length == 0
+  - name: Set xray_core_reality_private_key fact from command output
+    ansible.builtin.set_fact:
+      xray_core_reality_private_key: "{{ xray_x25519_output.stdout | regex_search('Private key: (\\S+)', '\\1') | first | trim }}"
+    when: xray_x25519_output.stdout is defined
 
-- name: Set xray_core_reality_short_id fact from command output
-  ansible.builtin.set_fact:
-    xray_core_reality_short_id: "{{ openssl_rand_output.stdout | trim }}"
-  when: openssl_rand_output.stdout is defined
+  - name: Check and Generate Xray Reality Short ID if not provided
+    ansible.builtin.command: openssl rand -hex 8
+    register: openssl_rand_output
+    changed_when: false
+    when: xray_core_reality_short_id is not defined or xray_core_reality_short_id | length == 0
 
-- name: Configure xray
-  ansible.builtin.template:
-    src: xray.config.json
-    dest: "{{ xray_core_config_file }}"
-    owner: "{{ xray_core_user }}"
-    group: "{{ xray_core_group }}"
-    mode: "0640"
-  tags:
-    - xray-core-config
-  notify:
-    - Restart xray service
+  - name: Set xray_core_reality_short_id fact from command output
+    ansible.builtin.set_fact:
+      xray_core_reality_short_id: "{{ openssl_rand_output.stdout | trim }}"
+    when: openssl_rand_output.stdout is defined
+
+  - name: Configure xray
+    ansible.builtin.template:
+      src: xray.config.json
+      dest: "{{ xray_core_config_file }}"
+      owner: "{{ xray_core_user }}"
+      group: "{{ xray_core_group }}"
+      mode: "0640"
+    tags:
+      - xray-core-config
+    notify:
+      - Restart xray service
+
+  when: not xray_config_file_stat.stat.exists
+  
